imagen de usuario

--- a/src/index.html
+++ b/src/index.html
@@ -2,27 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>InfinityTech</title>
+  <title>InfinityTech gg</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="https://firebasestorage.googleapis.com/v0/b/infinitytech-15a41.appspot.com/o/Logo-min.png?alt=media&token=0e8916f3-607a-48a0-af25-a60ffe88b5d2">
      <!-- Google Web Fonts -->
      <link rel="preconnect" href="https://fonts.gstatic.com">
-     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Rubik&display=swap" rel="stylesheet"> 
- 
+     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Rubik&display=swap" rel="stylesheet">
+
      <!-- Icon Font Stylesheet -->
      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet">
      <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
      <link href="assets/lib/flaticon/font/flaticon.css" rel="stylesheet">
- 
+
      <!-- Libraries Stylesheet -->
      <link href="assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
- 
+
      <!-- Customized Bootstrap Stylesheet -->
      <link href="assets/css/bootstrap.min.css" rel="stylesheet">
- 
+
      <!-- Template Stylesheet -->
-     <link href="assets/css/style.css" rel="stylesheet"> 
+     <link href="assets/css/style.css" rel="stylesheet">
   <style>
     body ,*{
       margin: 0;
@@ -39,7 +39,7 @@
      <script src="assets/lib/easing/easing.min.js"></script>
      <script src="assets/lib/waypoints/waypoints.min.js"></script>
      <script src="assets/lib/counterup/counterup.min.js"></script>
-     <script src="assets/lib/owlcarousel/owl.carousel.min.js"></script>   
+     <script src="assets/lib/owlcarousel/owl.carousel.min.js"></script>
      <script src="assets/js/main.js"></script>
 
 
