fix: correciones de video,paginacion de ejercicios

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>InfinityTech gg</title>
+  <title>trainity</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="https://firebasestorage.googleapis.com/v0/b/infinitytech-15a41.appspot.com/o/Logo-min.png?alt=media&token=0e8916f3-607a-48a0-af25-a60ffe88b5d2">
